<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.nanguo</groupId>
    <artifactId>lemall</artifactId>
    <version>v0.0.1</version>
    <packaging>pom</packaging> <!-- 修改为pom类型 -->

    <name>lemall-server</name>
    <description>父聚合模块</description>

    <modules>
        <module>lemall-app-main</module>
        <module>lemall-business</module>
        <module>lemall-common</module>
        <module>lemall-auth</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <spring-boot.version>3.0.2</spring-boot.version>
        <lemall-common.version>v0.0.1</lemall-common.version>
        <lemall-auth.version>v0.0.1</lemall-auth.version>
        <lemall-module-admin.version>v0.0.1</lemall-module-admin.version>
        <knife4j-openapi3-jakarta-spring-boot-starter.version>4.4.0</knife4j-openapi3-jakarta-spring-boot-starter.version>
        <sa-token-spring-boot3-starter.version>1.37.0</sa-token-spring-boot3-starter.version>
        <sa-token-jwt.version>1.37.0</sa-token-jwt.version>
        <sa-token-redis-jackson.version>1.37.0</sa-token-redis-jackson.version>
        <mybatis-plus-spring-boot3-starter.version>3.5.4</mybatis-plus-spring-boot3-starter.version>
        <druid-spring-boot-starter.veresion>1.2.18</druid-spring-boot-starter.veresion>
        <minio.version>8.4.5</minio.version>
    </properties>

    <!-- 将依赖管理保留在父POM中 -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.nanguo</groupId>
                <artifactId>lemall-common</artifactId>
                <version>${lemall-common.version}</version>
            </dependency>

            <dependency>
                <groupId>org.nanguo</groupId>
                <artifactId>lemall-auth</artifactId>
                <version>${lemall-auth.version}</version>
            </dependency>

            <dependency>
                <groupId>org.nanguo</groupId>
                <artifactId>lemall-module-admin</artifactId>
                <version>${lemall-module-admin.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j-openapi3-jakarta-spring-boot-starter.version}</version>
            </dependency>

            <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-spring-boot3-starter</artifactId>
                <version>${sa-token-spring-boot3-starter.version}</version>
            </dependency>

            <!-- Sa-Token 整合 jwt -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-jwt</artifactId>
                <version>${sa-token-jwt.version}</version>
            </dependency>

            <!-- Sa-Token 整合 Redis （使用 jackson 序列化方式） -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-redis-jackson</artifactId>
                <version>${sa-token-redis-jackson.version}</version>
            </dependency>

            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus-spring-boot3-starter.version}</version>
            </dependency>

            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${druid-spring-boot-starter.veresion}</version>
            </dependency>

            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!--使用aliyun的Maven镜像源提升下载速度-->
    <repositories>
        <repository>
            <id>aliyunmaven</id>
            <name>aliyun</name>
            <url>https://maven.aliyun.com/repository/public</url>
        </repository>
        <repository>
            <id>central2</id>
            <name>central2</name>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

    <!--使用aliyun的镜像源提升插件下载速度-->
    <pluginRepositories>
        <pluginRepository>
            <id>aliyunmaven</id>
            <name>aliyun</name>
            <url>https://maven.aliyun.com/repository/public</url>
        </pluginRepository>
        <pluginRepository>
            <id>central2</id>
            <name>central2</name>
            <url>https://repo1.maven.org/maven2/</url>
        </pluginRepository>
    </pluginRepositories>
</project>